--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -6149,3 +6149,9 @@ CONFIG_DYNAMIC_FSYNC=y
 CONFIG_DYNAMIC_FSYNC_BG_SYNC=y
 CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_PM_SUSPEND_BG_SYNC is not set
+
+# rt-kernel/rt-devel
+# CONFIG_INTERRUPT_OFF_HIST is not set
+# CONFIG_PREEMPT_OFF_HIST is not set
+# CONFIG_WAKEUP_LATENCY_HIST is not set
+# CONFIG_MISSED_TIMER_OFFSETS_HIST is not set
