[rt] h930_defconfig: add HWLAT_DETECTOR to disabled features/entries

--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -6155,3 +6155,4 @@ CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_PREEMPT_OFF_HIST is not set
 # CONFIG_WAKEUP_LATENCY_HIST is not set
 # CONFIG_MISSED_TIMER_OFFSETS_HIST is not set
+# CONFIG_HWLAT_DETECTOR is not set
