h930_defconfig: provide scalar fallback for AES CE, enable CHACHA20_NEON cipher

--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -6170,3 +6170,17 @@ CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_PREEMPT__LL is not set # former default
 CONFIG_PREEMPT_RTB=y
 # CONFIG_PREEMPT_RT_FULL is not set # when it's done
+
+# ARM64 CRYPTO
+CONFIG_ARM64_CRYPTO=y
+CONFIG_CRYPTO_SHA1_ARM64_CE=y
+CONFIG_CRYPTO_SHA2_ARM64_CE=y
+CONFIG_CRYPTO_GHASH_ARM64_CE=y
+CONFIG_CRYPTO_POLY_HASH_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64_CE=y
+CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
+CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
+CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
+CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_AES_ARM64=y # slower than CE (crypto extensions)!, fallback though
+CONFIG_CRYPTO_CHACHA20_NEON=y
