--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -6170,6 +6170,7 @@ CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_PREEMPT__LL is not set # former default
 CONFIG_PREEMPT_RTB=y
 # CONFIG_PREEMPT_RT_FULL is not set # when it's done
+# CONFIG_TRACE_IRQFLAGS is not set
 
 # ARM64 CRYPTO
 CONFIG_ARM64_CRYPTO=y
