--- a/arch/arm64/configs/lineageos_h930_defconfig
+++ b/arch/arm64/configs/lineageos_h930_defconfig
@@ -6171,8 +6171,8 @@ CONFIG_SUSPEND_SKIP_SYNC=y
 # CONFIG_MISSED_TIMER_OFFSETS_HIST is not set
 # CONFIG_HWLAT_DETECTOR is not set
 # CONFIG_PREEMPT__LL is not set # former default
-CONFIG_PREEMPT_RTB=y
-# CONFIG_PREEMPT_RT_FULL is not set # when it's done
+# CONFIG_PREEMPT_RTB is not set
+CONFIG_PREEMPT_RT_FULL=y # when it's done
 # CONFIG_TRACE_IRQFLAGS is not set
 
 # ARM64 CRYPTO
